feat :restructuring app with react and tailwind

--- a/spa.html
+++ b/spa.html
@@ -7,11 +7,11 @@
 			<link rel="stylesheet" href="stylespa.css">
 
 		</head>
+		<header class=" cabecalho">
+			<h1 class="titulo__capa"><strong> Spa da Lara</strong></h1>
+			<img class=" logo__spa" src="img/logo.jpeg">
+		</header>
 		<body>
-			<header class=" cabecalho">
-				<h1 class="titulo__capa"><strong> Spa da Lara</strong></h1>
-				<img class=" logo__spa" src="logo.jpeg">
-			</header>
 
 				   <div class=" introducao">
 					<p>Bem vindos ! Estamos contentes em atender vocês . Esta página é destinada a apresentação dos nossos serviços , contamos com inúmeros programas e diversos pacotes desde relaxamento fisico extremo à reciclagem orgânica por meio de shakes e alimentos e culturas para estimular renovação e recarga de energias .
@@ -21,7 +21,7 @@
 					Somos focados em atender nossos clientes com o que existe de mais moderno, e de maior eficácia. Usamos métodos contemporâneos para trazer o bem estar e recuperar as energias que tendemos a perder para essa rotina estressante, por isso ao fazer seu check-in esteja preparada(o) para viver uma experiência unica e revigorante!	
 					</p>
 					
-					<img class="imagem" src="spa.jpeg">
+					<img class="imagem" src="img/spa.jpeg">
 
 				</div>
 
